<?xml version="1.0" encoding="utf-8"?>

<!--
~ Copyright 2014 Ji Kim
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~     http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
-->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <SurfaceView
        android:id="@+id/albumSurface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scaleType="centerInside" 
        />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/shuffleImage"
            android:contentDescription="@string/shuffle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_action_shuffle" />

        <SeekBar
            android:id="@+id/seekBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="32dip"/>

        <ImageView
            android:id="@+id/loopImage"
            android:contentDescription="@string/loop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_action_repeat" />

    </TableRow>

    <TableRow
        android:layout_weight="0"
        android:gravity="center|bottom" >
        
        <ImageView
            android:id="@+id/previous"
            android:contentDescription="@string/previous"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@android:drawable/ic_media_previous" />
        
        <ImageView
            android:id="@+id/play"
            android:contentDescription="@string/play"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@android:drawable/ic_media_play" />
        
        <ImageView
            android:id="@+id/next"
            android:contentDescription="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@android:drawable/ic_media_next" />
        
    </TableRow>
    
</TableLayout>